fixed footer z-index

--- a/src/App.css
+++ b/src/App.css
@@ -57,6 +57,7 @@ footer {
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: -1;
 }
 
 @media screen and (max-width: 800px) {
